<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_action_service"
        android:title="@string/title_hotel" />

    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/ic_action_rest"
        android:title="@string/title_travel" />
    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_action_map"
        android:title="@string/title_places"

        />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/title_profile"/>

</menu>
