<?xml version="1.0" encoding="utf-8"?>

<FrameLayout

    android:id="@+id/card_layout"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/full_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="1dp"
        android:elevation="25dp"
        app:cardCornerRadius="5dp"
        >

   <android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="4dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

    <TextView
        android:id="@+id/top_rated_text_view"
        android:paddingTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Top Rated Hotels"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="5dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:includeFontPadding="false"
        />
    <TextView
        android:id="@+id/recom_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/top_rated_text_view"

        android:paddingLeft="7dp"

        android:includeFontPadding="false"

        tools:text="Recommend hotels for you"
        />
    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/recom_text_view"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:paddingStart="5dp"
        android:textSize="20sp"
        tools:text="Hotel Marigold"/>

       <include
           layout="@layout/rating_layout"/>




    <View
        android:id="@+id/simple_view"
        android:layout_width="0dp"
        android:layout_height="1dp"

        android:background="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/star_rating_layout"
        />
    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/simple_view"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"

        android:paddingTop="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_action_call_pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/simple_view"


                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_title"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:includeFontPadding="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_action_dir"
                app:layout_constraintLeft_toRightOf="@id/image_call"
                app:layout_constraintTop_toBottomOf="@id/simple_view"


                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dir_title"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:includeFontPadding="false"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_action_open"
                app:layout_constraintLeft_toRightOf="@id/image_dir"
                app:layout_constraintTop_toBottomOf="@id/simple_view"

                />
            <TextView
                android:id="@+id/image_open_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/open_title"
                android:textSize="9sp"
                tools:textColor="@color/green"
                android:includeFontPadding="false"
                android:textAlignment="center"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_action_save"

                app:layout_constraintLeft_toRightOf="@id/image_open"
                app:layout_constraintTop_toBottomOf="@id/simple_view"


                />
            <TextView
                android:id="@+id/save_image_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/save_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                android:includeFontPadding="false"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_share"
                app:layout_constraintLeft_toRightOf="@id/image_save"
                app:layout_constraintTop_toBottomOf="@id/simple_view"


                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_title"
                android:includeFontPadding="false"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/options_layout"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/more_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:text="MORE"
        android:textStyle="bold"
        android:paddingTop="2dp"

        android:paddingRight="5dp"
        android:textColor="@color/colorPrimaryDark"/>
        <ImageView
            android:id="@+id/hotel_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            tools:src="@drawable/image"/>
        </LinearLayout>



</android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    </FrameLayout>
